// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio Disabled, rendering 1`] = `
.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  display: inline-block;
  color: #d1d6db;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #007aff;
}

.c2:disabled ~ svg {
  color: #d1d6db;
}

.c3 {
  vertical-align: middle;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    checked={undefined}
    className="c1"
    disabled={true}
  >
    <input
      className="c2"
      disabled={true}
      type="radio"
    />
    <svg
      className="c3 c4"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            32,
            40,
            48,
            64,
          ],
          "colors": Object {
            "black": "#000",
            "blue": "#007aff",
            "blue0": "#cdf",
            "blue1": "#cdf",
            "blue2": "#007aff",
            "blue3": "#007aff",
            "blues": Array [
              "#cdf",
              "#cdf",
              "#007aff",
              "#007aff",
            ],
            "borderGray": "#d1d6db",
            "darkBlue": "#049",
            "darkGray": "#364049",
            "darkGreen": "#060",
            "darkOrange": "#a50",
            "darkPurple": "#407",
            "darkRed": "#800",
            "gray": "#687B8E",
            "gray0": "#f6f8fa",
            "gray1": "#f6f8fa",
            "gray2": "#687B8E",
            "gray3": "#687B8E",
            "green": "#0a0",
            "green0": "#cec",
            "green1": "#cec",
            "green2": "#0a0",
            "green3": "#0a0",
            "greens": Array [
              "#cec",
              "#cec",
              "#0a0",
              "#0a0",
            ],
            "lightBlue": "#cdf",
            "lightGray": "#f6f8fa",
            "lightGreen": "#cec",
            "lightOrange": "#feb",
            "lightPurple": "#ecf",
            "lightRed": "#fcc",
            "orange": "#fa0",
            "orange0": "#feb",
            "orange1": "#feb",
            "orange2": "#fa0",
            "orange3": "#fa0",
            "oranges": Array [
              "#feb",
              "#feb",
              "#fa0",
              "#fa0",
            ],
            "purple": "#70b",
            "purple0": "#ecf",
            "purple1": "#ecf",
            "purple2": "#70b",
            "purple3": "#70b",
            "purples": Array [
              "#ecf",
              "#ecf",
              "#70b",
              "#70b",
            ],
            "red": "#c00",
            "red0": "#fcc",
            "red1": "#fcc",
            "red2": "#c00",
            "red3": "#c00",
            "reds": Array [
              "#fcc",
              "#fcc",
              "#c00",
              "#c00",
            ],
            "text": "#001833",
            "white": "#fff",
          },
          "duration": Object {
            "fast": 150,
            "normal": 300,
            "slow": 450,
            "slowest": 600,
          },
          "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
          ],
          "fontWeights": Object {
            "bold": 600,
            "regular": 400,
          },
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:32em)",
            "@media screen and (min-width:40em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:64em)",
          ],
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "2px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
      	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
      />
    </svg>
  </div>
</div>
`;

exports[`Radio Not Selected, rendering 1`] = `
.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  display: inline-block;
  color: #d1d6db;
}

.c1:hover {
  color: #007aff;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #007aff;
}

.c2:disabled ~ svg {
  color: #d1d6db;
}

.c3 {
  vertical-align: middle;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    checked={undefined}
    className="c1"
    disabled={undefined}
  >
    <input
      className="c2"
      type="radio"
    />
    <svg
      className="c3 c4"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            32,
            40,
            48,
            64,
          ],
          "colors": Object {
            "black": "#000",
            "blue": "#007aff",
            "blue0": "#cdf",
            "blue1": "#cdf",
            "blue2": "#007aff",
            "blue3": "#007aff",
            "blues": Array [
              "#cdf",
              "#cdf",
              "#007aff",
              "#007aff",
            ],
            "borderGray": "#d1d6db",
            "darkBlue": "#049",
            "darkGray": "#364049",
            "darkGreen": "#060",
            "darkOrange": "#a50",
            "darkPurple": "#407",
            "darkRed": "#800",
            "gray": "#687B8E",
            "gray0": "#f6f8fa",
            "gray1": "#f6f8fa",
            "gray2": "#687B8E",
            "gray3": "#687B8E",
            "green": "#0a0",
            "green0": "#cec",
            "green1": "#cec",
            "green2": "#0a0",
            "green3": "#0a0",
            "greens": Array [
              "#cec",
              "#cec",
              "#0a0",
              "#0a0",
            ],
            "lightBlue": "#cdf",
            "lightGray": "#f6f8fa",
            "lightGreen": "#cec",
            "lightOrange": "#feb",
            "lightPurple": "#ecf",
            "lightRed": "#fcc",
            "orange": "#fa0",
            "orange0": "#feb",
            "orange1": "#feb",
            "orange2": "#fa0",
            "orange3": "#fa0",
            "oranges": Array [
              "#feb",
              "#feb",
              "#fa0",
              "#fa0",
            ],
            "purple": "#70b",
            "purple0": "#ecf",
            "purple1": "#ecf",
            "purple2": "#70b",
            "purple3": "#70b",
            "purples": Array [
              "#ecf",
              "#ecf",
              "#70b",
              "#70b",
            ],
            "red": "#c00",
            "red0": "#fcc",
            "red1": "#fcc",
            "red2": "#c00",
            "red3": "#c00",
            "reds": Array [
              "#fcc",
              "#fcc",
              "#c00",
              "#c00",
            ],
            "text": "#001833",
            "white": "#fff",
          },
          "duration": Object {
            "fast": 150,
            "normal": 300,
            "slow": 450,
            "slowest": 600,
          },
          "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
          ],
          "fontWeights": Object {
            "bold": 600,
            "regular": 400,
          },
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:32em)",
            "@media screen and (min-width:40em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:64em)",
          ],
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "2px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8
      	s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
      />
    </svg>
  </div>
</div>
`;

exports[`Radio Selected, rendering 1`] = `
.c4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
}

.c1 {
  display: inline-block;
  color: #d1d6db;
}

.c2 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  opacity: 0;
  position: absolute;
  z-index: 0;
}

.c2:focus {
  box-shadow: none;
}

.c2:checked ~ svg {
  color: #007aff;
}

.c2:disabled ~ svg {
  color: #d1d6db;
}

.c3 {
  vertical-align: middle;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
}

.c0 * {
  box-sizing: border-box;
}

<div
  className="c0"
>
  <div
    checked={true}
    className="c1"
    disabled={undefined}
  >
    <input
      checked={true}
      className="c2"
      type="radio"
    />
    <svg
      className="c3 c4"
      fill="currentcolor"
      height={24}
      theme={
        Object {
          "bold": 600,
          "boxShadows": Array [
            "0 0 2px 0 rgba(0,0,0,.08),0 1px 4px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 2px 8px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 4px 16px 0 rgba(0,0,0,.16)",
            "0 0 2px 0 rgba(0,0,0,.08),0 8px 32px 0 rgba(0,0,0,.16)",
          ],
          "breakpoints": Array [
            32,
            40,
            48,
            64,
          ],
          "colors": Object {
            "black": "#000",
            "blue": "#007aff",
            "blue0": "#cdf",
            "blue1": "#cdf",
            "blue2": "#007aff",
            "blue3": "#007aff",
            "blues": Array [
              "#cdf",
              "#cdf",
              "#007aff",
              "#007aff",
            ],
            "borderGray": "#d1d6db",
            "darkBlue": "#049",
            "darkGray": "#364049",
            "darkGreen": "#060",
            "darkOrange": "#a50",
            "darkPurple": "#407",
            "darkRed": "#800",
            "gray": "#687B8E",
            "gray0": "#f6f8fa",
            "gray1": "#f6f8fa",
            "gray2": "#687B8E",
            "gray3": "#687B8E",
            "green": "#0a0",
            "green0": "#cec",
            "green1": "#cec",
            "green2": "#0a0",
            "green3": "#0a0",
            "greens": Array [
              "#cec",
              "#cec",
              "#0a0",
              "#0a0",
            ],
            "lightBlue": "#cdf",
            "lightGray": "#f6f8fa",
            "lightGreen": "#cec",
            "lightOrange": "#feb",
            "lightPurple": "#ecf",
            "lightRed": "#fcc",
            "orange": "#fa0",
            "orange0": "#feb",
            "orange1": "#feb",
            "orange2": "#fa0",
            "orange3": "#fa0",
            "oranges": Array [
              "#feb",
              "#feb",
              "#fa0",
              "#fa0",
            ],
            "purple": "#70b",
            "purple0": "#ecf",
            "purple1": "#ecf",
            "purple2": "#70b",
            "purple3": "#70b",
            "purples": Array [
              "#ecf",
              "#ecf",
              "#70b",
              "#70b",
            ],
            "red": "#c00",
            "red0": "#fcc",
            "red1": "#fcc",
            "red2": "#c00",
            "red3": "#c00",
            "reds": Array [
              "#fcc",
              "#fcc",
              "#c00",
              "#c00",
            ],
            "text": "#001833",
            "white": "#fff",
          },
          "duration": Object {
            "fast": 150,
            "normal": 300,
            "slow": 450,
            "slowest": 600,
          },
          "font": "'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif",
          "fontSizes": Array [
            12,
            14,
            16,
            20,
            24,
            32,
            48,
          ],
          "fontWeights": Object {
            "bold": 600,
            "regular": 400,
          },
          "letterSpacings": Object {
            "caps": "0.025em",
            "normal": "normal",
          },
          "maxContainerWidth": "1280px",
          "mediaQueries": Array [
            "@media screen and (min-width:32em)",
            "@media screen and (min-width:40em)",
            "@media screen and (min-width:48em)",
            "@media screen and (min-width:64em)",
          ],
          "radii": Array [
            0,
            2,
            6,
          ],
          "radius": "2px",
          "regular": 400,
          "space": Array [
            0,
            4,
            8,
            16,
            32,
            64,
            128,
          ],
          "timingFunctions": Object {
            "easeIn": "cubic-bezier(0.5, 0, 1, 1)",
            "easeInOut": "cubic-bezier(0.5, 0, 0.25, 1)",
            "easeOut": "cubic-bezier(0, 0, 0.25, 1)",
          },
        }
      }
      viewBox="0 0 24 24"
      width={24}
    >
      <path
        d="M12,7c-2.8,0-5,2.2-5,5s2.2,5,5,5s5-2.2,5-5S14.8,7,12,7z M12,2C6.5,2,2,6.5,2,12s4.5,10,10,10
      	s10-4.5,10-10S17.5,2,12,2z M12,20c-4.4,0-8-3.6-8-8s3.6-8,8-8s8,3.6,8,8S16.4,20,12,20z"
      />
    </svg>
  </div>
</div>
`;
